ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"v1","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"dep.canary.test","http":{"paths":[{"backend":{"service":{"name":"nginx1-service","port":{"number":5555}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"nginx2-service","port":{"number":6666}}},"path":"/v2","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2023-08-10T18:57:08Z"
  generation: 6
  name: v1
  namespace: default
  resourceVersion: "67408"
  uid: e265d1c5-73db-414d-b3d2-0ee75d70f287
spec:
  ingressClassName: nginx
  rules:
  - host: dep.canary.test
    http:
      paths:
      - backend:
          service:
            name: nginx1-service
            port:
              number: 5555
        path: /
        pathType: Prefix
      - backend:
          service:
            name: nginx2-service
            port:
              number: 6666
        path: /v2
        pathType: Prefix
